--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build:scss": "node-sass src/scss/main.scss public/css/main.css",
+    "build:scss:watch": "node-sass src/scss/main.scss public/css/main.css --watch",
     "prestart": "npm install",
     "postinstall": "bower install",
     "start": "node app",
@@ -14,6 +16,7 @@
   "dependencies": {
     "bower": "^1.8.0",
     "express": "^4.15.3",
+    "node-sass": "^4.5.3",
     "supervisor": "^0.12.0"
   },
   "devDependencies": {
