--- a/package.json
+++ b/package.json
@@ -14,12 +14,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "bower": "^1.8.0",
     "express": "^4.15.3",
+    "mongoose": "^4.10.4",
     "node-sass": "^4.5.3",
     "supervisor": "^0.12.0"
   },
   "devDependencies": {
-    "dotenv": "^4.0.0"
+    "angular": "^1.6.4",
+    "angular-route": "^1.6.4",
+    "babelify": "^7.3.0",
+    "browserify": "^14.4.0",
+    "dotenv": "^4.0.0",
+    "node-sass": "^4.5.3",
+    "nodemon": "^1.11.0",
+    "supervisor": "^0.12.0",
+    "watchify": "^3.9.0"
   }
 }
