--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build:js": "browserify src/js/app.js > client/app.js",
     "build:js:watch": "watchify -t babelify src/js/app.js -d -o client/app.js -v",
-    "build:scss": "node-sass src/scss/main.scss public/css/main.css",
-    "build:scss:watch": "node-sass src/scss/main.scss public/css/main.css --watch",
+    "build:scss": "node-sass src/scss/main.scss client/css/main.css",
+    "build:scss:watch": "node-sass src/scss/main.scss client/css/main.css --watch",
     "prestart": "npm install",
     "postinstall": "bower install",
     "start": "node index",
