--- a/package.json
+++ b/package.json
@@ -22,7 +22,13 @@
     "express": "^4.15.3",
     "mongoose": "^4.10.4",
     "node-sass": "^4.5.3",
-    "supervisor": "^0.12.0"
+    "supervisor": "^0.12.0",
+    "express-jwt": "^5.3.0",
+    "jsonwebtoken": "^7.4.1",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0"
   },
   "devDependencies": {
     "angular": "^1.6.4",
