--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   "devDependencies": {
     "angular": "^1.6.4",
     "angular-route": "^1.6.4",
+    "angular-toastr": "^2.1.1",
+    "angular-animate": "^1.6.4",
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
     "node-sass": "^4.5.3",
