--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,10 @@
     "bootstrap": "^3.3.7",
     "angular": "^1.6.4",
     "angular-route": "^1.6.4",
-     "angular-jwt": "^0.1.9"
+    "angular-jwt": "^0.1.9",
+    "angular-toastr": "^2.1.1"
+  },
+  "devDependencies": {
+    "angular-toastr": "^2.1.1"
   }
 }
